--- a/tsi.conf
+++ b/tsi.conf
@@ -19,11 +19,6 @@ SIMULATIONS = 2
 # output device. The default value is 0 (false).
 VERBOSE = 1
 
-# The global RESUME parameter sets the flag that enables the ability to resume
-# the execution from the data recorded on the dump path. The default value is
-# 0 (false).
-#RESUME = 0
-
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
 # Enabling the RESUME or DUMP features disables this optimization.
@@ -31,16 +26,16 @@ OPTIMIZE_LAST = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
-INPUT_PATH = /home/miguel/tsi/input/
+INPUT_PATH = /home/data/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/miguel/tsi/output/
+OUTPUT_PATH = /home/data/output/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-LOG_PATH = /home/miguel/tsi/logs/
+LOG_PATH = /home/data/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
@@ -59,7 +54,7 @@ RESULT_TYPE = tsi-ascii
 # The heap SIZE parameter sets the number of grids that will be made
 # available for the TSI execution. The default value is 13, the current
 # maximum number of grids that are needed.
-SIZE = 12
+SIZE = 13
 
 # The heap USEFS parameter is the flag that triggers swapping unused grids
 # to disk to save memory. The default value is 0 (false). If the program
@@ -106,7 +101,7 @@ OPTIMIZE = 0
 # By default, the distributed COMPARE and selection of best results is done 
 # using point to point  communication. 
 # When optimized, collective operations can provide higher performance. 
-# Default setting is 0 (false).
+# Default setting is 1 (false).
 COLLECTIVE_COMPARE = 1
 
 
@@ -119,26 +114,26 @@ COLLECTIVE_COMPARE = 1
 #YNUMBER = 19      # Number of blocks in Y direction (NY)
 #ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-XNUMBER = 194      # Number of blocks in X direction (NX)
-YNUMBER = 192      # Number of blocks in Y direction (NY)
-ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+#XNUMBER = 194      # Number of blocks in X direction (NX)
+#YNUMBER = 192      # Number of blocks in Y direction (NY)
+#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
-#XNUMBER = 300      # Number of blocks in X direction (NX)
-#YNUMBER = 300      # Number of blocks in Y direction (NY)
-#ZNUMBER = 150   # Number of blocks in Z direction (NZ)
+XNUMBER = 300      # Number of blocks in X direction (NX)
+YNUMBER = 300      # Number of blocks in Y direction (NY)
+ZNUMBER = 330   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
 #ZNUMBER = 552      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
-XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
-# bigTest
 #XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-#YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
-#ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
+#YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
+#ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
+# bigTest
+XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+YCOORD = 4000      # Coordinate in Y axis of the first block (YMN)
+ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 
 
 [SEISMIC]
@@ -151,9 +146,9 @@ ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # data.
 #FILENAME = seismic-bin-19x19x200.tsi
 #FILENAME = seismic-19x19x200.out
-FILENAME = seismic-194x192x200.out
+#FILENAME = seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.out
-#FILENAME = seismic-300x300x552.out
+FILENAME = seismic-300x300x552.out
 #FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
