--- a/tsi.conf
+++ b/tsi.conf
@@ -39,7 +39,7 @@ LOG_PATH = /home/data/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-RESULT_FILE = 64sstrat1.tsi
+RESULT_FILE = HUGE.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "tsi-ascii", compatible with SGEMS ascii
@@ -77,35 +77,6 @@ TMP_PATH = /tmp/tsi-miguel/
 
 
 
-[MPI]
-# The global flag MIDDLEZERO controls the node that will be considered the
-# root node during parallel execution. If the flag is set to 1 (true), node
-# 0 will be considered the root node. If the flag is set to 0 (false) the
-# root node will process number (number_of_processes / 2). This flag may
-# provide some additional effiency during the communication stages of the
-# program, depending on the MPI implementation and cluster network topology.
-# This flag should have no effect on SMP systems. The default value is 0
-# (false).
-#MIDDLEZERO = 0
-
-# The global parameter OPTIMIZE applies only to parallel execution of the
-# program. If this parameter is set to 1 (default), the program will try
-# to optimize execution by relating the number of simulations to the number
-# of processes running. If there are less than 2^n simulations per process
-# launched, it will free number of CPU that will not contribute to speed-up
-# the execution.
-OPTIMIZE = 0
-
-
-# The COLLECTIVE_COMPARE parameter enables the use of collective operations.
-# By default, the distributed COMPARE and selection of best results is done 
-# using point to point  communication. 
-# When optimized, collective operations can provide higher performance. 
-# Default setting is 1 (false).
-COLLECTIVE_COMPARE = 1
-
-
-
 ########################################################################
 ########################################################################
 [GRID]
@@ -118,13 +89,13 @@ COLLECTIVE_COMPARE = 1
 #YNUMBER = 192      # Number of blocks in Y direction (NY)
 #ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
-XNUMBER = 300      # Number of blocks in X direction (NX)
-YNUMBER = 300      # Number of blocks in Y direction (NY)
-ZNUMBER = 400   # Number of blocks in Z direction (NZ)
+#XNUMBER = 300      # Number of blocks in X direction (NX)
+#YNUMBER = 300      # Number of blocks in Y direction (NY)
+#ZNUMBER = 400   # Number of blocks in Z direction (NZ)
 # giant
-#XNUMBER = 491      # Number of blocks in X direction (NX)
-#YNUMBER = 334      # Number of blocks in Y direction (NY)
-#ZNUMBER = 552      # Number of blocks in Z direction (NZ)
+XNUMBER = 491      # Number of blocks in X direction (NX)
+YNUMBER = 334      # Number of blocks in Y direction (NY)
+ZNUMBER = 552      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
 #XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
@@ -149,7 +120,7 @@ ZCOORD = 1299      # Coordinate in Z axis of the first block (ZMN)
 #FILENAME = seismic-194x192x200.out
 #FILENAME = seismic-300x300x320.out
 FILENAME = seismic-300x300x552.out
-#FILENAME = seismic-491x334x552.out
+FILENAME = seismic-491x334x552.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "tsi-ascii". See GLOBAL:RESULT_TYPE for more options
@@ -348,4 +319,35 @@ AA2  = 12     # Vertical range (AA2)
 #AA=
 #AA1=
 #AA2=
+
+
+
+[MPI]
+# The global flag MIDDLEZERO controls the node that will be considered the
+# root node during parallel execution. If the flag is set to 1 (true), node
+# 0 will be considered the root node. If the flag is set to 0 (false) the
+# root node will process number (number_of_processes / 2). This flag may
+# provide some additional effiency during the communication stages of the
+# program, depending on the MPI implementation and cluster network topology.
+# This flag should have no effect on SMP systems. The default value is 0
+# (false).
+#MIDDLEZERO = 0
+
+# The global parameter OPTIMIZE applies only to parallel execution of the
+# program. If this parameter is set to 1 (default), the program will try
+# to optimize execution by relating the number of simulations to the number
+# of processes running. If there are less than 2^n simulations per process
+# launched, it will free number of CPU that will not contribute to speed-up
+# the execution.
+OPTIMIZE = 0
+
+
+# The COLLECTIVE_COMPARE parameter enables the use of collective operations.
+# By default, the distributed COMPARE and selection of best results is done 
+# using point to point  communication. 
+# When optimized, collective operations can provide higher performance. 
+# Default setting is 1 (false).
+COLLECTIVE_COMPARE = 1
+
+
 
